--- a/src/pages/wushu-sanda.astro
+++ b/src/pages/wushu-sanda.astro
@@ -377,6 +377,7 @@
 								<li><a href="/traditionell-kungfu">Traditionell Kung-Fu</a></li>
 							</ul>
 						</li>
+						<li><a href="/aktuellt">Aktuellt</a></li>
 						<li><a href="/contact">Kontakt</a></li>
 						<li><a href="/schedule">Schema</a></li>
 						<li><a href="tel:070-565-35-88">Ring Oss</a></li>
