--- a/src/pages/schedule.astro
+++ b/src/pages/schedule.astro
@@ -440,6 +440,7 @@
 							</ul>
 						</li>
 						<li><a href="/aktuellt">Aktuellt</a></li>
+						<li><a href="/tavling">Tävling</a></li>
 						<li><a href="/contact">Kontakt</a></li>
 						<li><a href="/schedule">Schema</a></li>
 						<li><a href="tel:070-565-35-88">Ring Oss</a></li>
