--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -517,6 +517,7 @@
 						</li>
 						<li><a href="/aktuellt">Aktuellt</a></li>
 						<li><a href="/tavling">Tävling</a></li>
+						<li><a href="/historik-media">Historik & Media</a></li>
 						<li><a href="/contact">Kontakt</a></li>
 						<li><a href="/schedule">Schema</a></li>
 						<li><a href="tel:070-565-35-88">Ring Oss</a></li>
