--- a/src/pages/schedule.astro
+++ b/src/pages/schedule.astro
@@ -442,6 +442,7 @@
 						<li><a href="/aktuellt">Aktuellt</a></li>
 						<li><a href="/tavling">Tävling</a></li>
 						<li><a href="/historik-media">Historik & Media</a></li>
+						<li><a href="/tranare">Tränare</a></li>
 						<li><a href="/contact">Kontakt</a></li>
 						<li><a href="/schedule">Schema</a></li>
 						<li><a href="tel:070-565-35-88">Ring Oss</a></li>
