Add FÃ¶rbunds Medlem navigation link and page to all pages

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -369,6 +369,7 @@
 						<li><a href="/contact">Kontakt</a></li>
 						<li><a href="/schedule">Schema</a></li>
 						<li><a href="tel:070-565-35-88">Ring Oss</a></li>
+						<li><a href="/forbunds-medlem">Förbunds Medlem</a></li>
 					</ul>
 				</nav>
 			</div>
