--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -683,6 +683,7 @@
 		<section class="hero">
 			<div class="hero-carousel">
 				<div class="hero-slide hero-slide-mobile active" style="background-image: url('/hero/Mohammedfrontpage.JPG');"></div>
+				<div class="hero-slide hero-slide-mobile" style="background-image: url('/hero/Submissionfrontpagemobile.JPG');"></div>
 				<div class="hero-slide hero-slide-desktop" style="background-image: url('/hero/Submissionfrontpage.JPG');"></div>
 				<div class="hero-slide" style="background-image: url('/hero/Sandafrontpage.jpg');"></div>
 				<div class="hero-slide" style="background-image: url('/hero/MMAfrontpage.JPG');"></div>
